--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -281,6 +281,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\Csegmentsize = \Csegmentecpieces\Cecpiecesize = 4104$] The size of a segment in octets. See section \ref{sec:segments}.
   \item[$\Csegmentfootprint = \Csegmentsize + 32\ceil{\log_2(\Cmaxpackageimports)} = 4488$] The additional footprint in the Audits DA of a single imported segment. See equation \ref{eq:segmentfootprint}.
   \item[$\Cmaxpackageimports = 3,072$] The maximum number of imports in a work-package. See equation \ref{eq:limitworkpackagebandwidth}.
+  \item[$\Cecoriginalshardsize = \nicefrac{\Cecpiecesize}{2} = 342$] The number of required original data shards in an erasure coding scheme. See equation \ref{eq:erasurecoding}.
   \item[$\Csegmentecpieces = 6$] The number of erasure-coded pieces in a segment.
   \item[$\Cmaxreportvarsize = 48\cdot2^{10}$] The maximum total size of all unbounded blobs in a work-report, in octets. See equation \ref{eq:limitworkreportsize}.
   \item[$\Cmemosize = 128$] The size of a transfer memo in octets. See equation \ref{eq:defxfer}.
