rename originalshards constant and apply missing nicefrac

--- a/preamble.tex
+++ b/preamble.tex
@@ -278,7 +278,7 @@
 \newcommand*{\Csegmentfootprint}{\mathsf{W}_F}
 \newcommand*{\Csegmentsize}{\mathsf{W}_G}
 \newcommand*{\Cmaxpackageimports}{\mathsf{W}_M}
-\newcommand*{\Cecoriginalshardsize}{\mathsf{W}_O}
+\newcommand*{\Cecoriginalshards}{\mathsf{W}_O}
 \newcommand*{\Csegmentecpieces}{\mathsf{W}_P}
 \newcommand*{\Cmaxreportvarsize}{\mathsf{W}_R}
 \newcommand*{\Cmemosize}{\mathsf{W}_T}
