--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -4,7 +4,7 @@
 \newcommand{\join}{\text{join}}
 \newcommand{\spl}[1]{\text{split}_{#1}}
 
-The foundation of the data-availability and distribution system of \Jam is a systematic Reed-Solomon erasure coding function in \textsc{gf}($2^{16}$) of rate $\Cecoriginalshardsize$:$\Cvalcount$, the same transform as done by the algorithm of \cite{lin2014novel}. We use a little-endian $\blob[2]$ form of the 16-bit \textsc{gf} points with a functional equivalence given by $\fnencode[2]$. From this we may assume the encoding function $\fnerasurecode: \sequence[\nicefrac{\Cecpiecesize}{2}]{\blob[2]} \to \sequence[\Cvalcount]{\blob[2]}$ and the recovery function $\fnecrecover: \protoset{\tuple{\blob[2], \Nmax{\Cvalcount}}}_{\nicefrac{\Cecpiecesize}{2}} \to \sequence[\nicefrac{\Cecpiecesize}{2}]{\blob[2]}$. Encoding is done by extrapolating a data blob of size $\Cecpiecesize$ octets (provided in $\fnerasurecode$ here as $\Cecoriginalshardsize$ octet pairs) into $\Cvalcount$ octet pairs. Recovery is done by collecting together any distinct $\Cecoriginalshardsize$ octet pairs, together with their indices, and transforming this into the original sequence of $\Cecoriginalshardsize$ octet pairs.
+The foundation of the data-availability and distribution system of \Jam is a systematic Reed-Solomon erasure coding function in \textsc{gf}($2^{16}$) of rate $\Cecoriginalshards$:$\Cvalcount$, the same transform as done by the algorithm of \cite{lin2014novel}. We use a little-endian $\blob[2]$ form of the 16-bit \textsc{gf} points with a functional equivalence given by $\fnencode[2]$. From this we may assume the encoding function $\fnerasurecode: \sequence[\Cecoriginalshardsize]{\blob[2]} \to \sequence[\Cvalcount]{\blob[2]}$ and the recovery function $\fnecrecover: \protoset{\tuple{\blob[2], \Nmax{\Cvalcount}}}_{\Cecoriginalshardsize} \to \sequence[\Cecoriginalshardsize]{\blob[2]}$. Encoding is done by extrapolating a data blob of size $\Cecpiecesize$ octets (provided in $\fnerasurecode$ here as $\Cecoriginalshards$ octet pairs) into $\Cvalcount$ octet pairs. Recovery is done by collecting together any distinct $\Cecoriginalshards$ octet pairs, together with their indices, and transforming this into the original sequence of $\Cecoriginalshards$ octet pairs.
 
 Practically speaking, this allows for the efficient encoding and recovery of data whose size is a multiple of $\Cecpiecesize$ octets. Data whose length is not divisible by $\Cecpiecesize$ must be padded (we pad with zeroes). We use this erasure-coding in two contexts within the \Jam protocol; one where we encode variable sized (but typically very large) data blobs for the Audit \textsc{da} and block-distribution system, and the other where we encode much smaller fixed-size data \emph{segments} for the Import \textsc{da} system.
 
@@ -12,9 +12,9 @@ For the Import \textsc{da} system, we deal with an input size of 4,104 octets re
 
 \subsection{Blob Encoding and Recovery}
 
-We assume some data blob $\mathbf{d} \in \blob[\Cecpiecesize{}k], k \in \N$. This blob is split into a whole number of $k$ pieces, each a sequence of $\Cecoriginalshardsize$ octet pairs. Each piece is erasure-coded using $\fnerasurecode$ as above to give $\Cvalcount$ octet pairs per piece.
+We assume some data blob $\mathbf{d} \in \blob[\Cecpiecesize{}k], k \in \N$. This blob is split into a whole number of $k$ pieces, each a sequence of $\Cecoriginalshards$ octet pairs. Each piece is erasure-coded using $\fnerasurecode$ as above to give $\Cvalcount$ octet pairs per piece.
 
-The resulting matrix is grouped by its pair-index and concatenated to form $\Cvalcount$ \emph{chunks}, each of $k$ octet-pairs. Any $\Cecoriginalshardsize$ of these chunks may then be used to reconstruct the original data $\mathbf{d}$.
+The resulting matrix is grouped by its pair-index and concatenated to form $\Cvalcount$ \emph{chunks}, each of $k$ octet-pairs. Any $\Cecoriginalshards$ of these chunks may then be used to reconstruct the original data $\mathbf{d}$.
 
 Formally we begin by defining two utility functions for splitting some large sequence into a number of equal-sized sub-sequences and for reconstituting such subsequences back into a single large sequence:
 \begin{align}
@@ -35,13 +35,13 @@ We may then define our erasure-code chunking function which accepts an arbitrary
   }
 \end{equation}
 
-The original data may be reconstructed with any $\Cecoriginalshardsize$ of the $\Cvalcount$ resultant items (along with their indices). If the original $\Cecoriginalshardsize$ items are known then reconstruction is just their concatenation.
+The original data may be reconstructed with any $\Cecoriginalshards$ of the $\Cvalcount$ resultant items (along with their indices). If the original $\Cecoriginalshards$ items are known then reconstruction is just their concatenation.
 \begin{equation}
   \label{eq:erasurecodinginv}
   \fnecrecover_{k \in \N}\colon\abracegroup{
-    \protoset{\tuple{\blob[2k], \Nmax{\Cvalcount}}}_{\nicefrac{\Cecpiecesize}{2}} &\to \blob[\Cecpiecesize{}k] \\
+    \protoset{\tuple{\blob[2k], \Nmax{\Cvalcount}}}_{\Cecoriginalshardsize} &\to \blob[\Cecpiecesize{}k] \\
     \mathbf{c} &\mapsto \begin{cases}
-      \encode{\sq{\build{\mathbf{x}}{\tup{\mathbf{x}, i} \orderedin \sqorderby{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}}}} &\when \set{\build{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}} = \Nmax{\nicefrac{\Cecpiecesize}{2}}\\
+      \encode{\sq{\build{\mathbf{x}}{\tup{\mathbf{x}, i} \orderedin \sqorderby{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}}}} &\when \set{\build{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}} = \Nmax{\Cecoriginalshardsize}\\
       \join(\join^\#({}^\text{T}\sq{
         \build{
           \ecrecover{{\set{\build{
